# vigilant-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  build_app.sh  desktop.py  docker-compose.yml  make_icon.py  pyproject.toml  vigilant.yaml
config/: rag.yaml  settings.py
src/api/: dependencies.py  main.py
src/api/v1/: health.py  ingest.py  query.py
src/evaluation/: dataset.py  evaluator.py
src/generation/: llm_client.py  prompt_builder.py
src/ingestion/: chunker.py  indexer.py  parser.py  watcher.py
src/observability/: tracer.py
src/retrieval/: embedder.py  reranker.py  searcher.py  sparse_embedder.py
tests/unit/: test_chunker.py  test_parser.py  test_prompt_builder.py
